// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem:  should render 1`] = `
<a
  className=""
  onClick={[MockFunction]}
  title="View name"
>
  <span
    style={
      Object {
        "backgroundColor": "#000",
      }
    }
  />
  <span>
    name
    <ChevronRight />
  </span>
  <span>
    2
  </span>
</a>
`;

exports[`LegendItem:  should render breadcrumb 1`] = `
<a
  className=""
  onClick={[MockFunction]}
  title="View name"
>
  <span
    style={
      Object {
        "backgroundColor": "#000",
      }
    }
  />
  <ChevronLeft />
  <span>
    name
    <ChevronRight />
  </span>
  <span>
    2
  </span>
</a>
`;
